# typer-plugins

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml  ci_dev.yml
examples/my_app/: main_app.py
examples/plugin_a/: pyproject.toml
examples/plugin_a/plugin_a/: app.py
examples/plugin_a/plugin_a/sub_commands_a/: some_commands.py
examples/plugin_a/plugin_a/sub_commands_b/: some_more_commands.py
examples/plugin_b/: pyproject.toml
examples/plugin_b/plugin_b/: app.py
tests/: test_plugins.py
