[tool.poetry]
name = "plugin-b"
version = "0.1.0"
description = ""
authors = ["Brandon Spendlove <brandon-spendlove@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.plugins."exampleapp.plugins"]
"plugin-b" = "plugin_b.app:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
